[package]
name = "diesel-tracing"
version = "0.1.5"
authors = ["John Children <john@cambridgequantum.com>"]
license = "MIT"
edition = "2018"
description = "Connection telemetry middleware for diesel and tracing"
repository = "https://github.com/CQCL/diesel-tracing"
readme = "README.md"
keywords = ["diesel", "logging", "tracing", "database", "opentelemetry"]

[badges]
maintenance = { status = "experimental" }

[features]
default = []

mysql = ["diesel/mysql", "diesel/i-implement-a-third-party-backend-and-opt-into-breaking-changes"]
postgres = ["diesel/postgres", "diesel/i-implement-a-third-party-backend-and-opt-into-breaking-changes"]
sqlite = ["diesel/sqlite", "diesel/i-implement-a-third-party-backend-and-opt-into-breaking-changes"]

[dependencies]
diesel = { version = "2.0.0-rc.0", features = ["network-address"], default-features = false }
ipnetwork = ">=0.12.2, <0.19.0"
tracing = "0.1"

[dev-dependencies]
diesel = { version = "2.0.0-rc.0", features = ["mysql", "postgres", "sqlite"] }
